Update portfolio with correct file paths and effects

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 </header>
 
 <section class="hero" id="about">
-  <img src="assets/myphoto.jpg" alt="Hammid Bin Aejaz" class="profile-photo">
+  <img src="assets/20250730_134935.jpg" alt="Hammid Bin Aejaz" class="profile-photo">
   <h1>Hi, I’m Hammid 👋</h1>
   <p>B.E. Computer Science (AI & ML) | 2023 – 2027</p>
   <p>
@@ -142,7 +142,7 @@
     <div class="card">
       <h3>Artificial Intelligence Fundamentals – IBM (Virtual) | Aug 2025</h3>
       <p>
-        <a href="assets/certificate1.pdf" download>Download PDF</a> | 
+        <a href="assets/IBMDesign20250820-28-p0i2bg.pdf" download>Download PDF</a> | 
         <a href="https://www.credly.com/badges/e67bc372-cab4-4de3-a68a-61d09d8e537b" target="_blank">Verify Certificate</a>
       </p>
     </div>
