--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hammid Bin Aejaz - Portfolio</title>
   <style>
+    @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
+
     :root {
-      --bg-color: #f9fafb;
+      --bg-gradient: linear-gradient(135deg,#2563eb,#3b82f6);
       --text-color: #1f2937;
       --card-bg: #fff;
       --accent: #2563eb;
@@ -14,7 +16,7 @@
     }
 
     [data-theme="dark"] {
-      --bg-color: #111827;
+      --bg-gradient: linear-gradient(135deg,#111827,#1f2937);
       --text-color: #f9fafb;
       --card-bg: #1f2937;
       --accent: #3b82f6;
@@ -23,23 +25,25 @@
 
     body {
       margin:0; font-family:'Poppins',sans-serif;
-      background: var(--bg-color);
+      background: var(--bg-gradient);
+      background-attachment: fixed;
       color: var(--text-color);
       scroll-behavior: smooth;
     }
 
     header {
       display:flex; justify-content:space-between; align-items:center;
-      padding:1rem 2rem; background: var(--card-bg);
+      padding:1rem 2rem; background: rgba(255,255,255,0.9);
+      backdrop-filter: blur(8px);
       box-shadow:0 2px 6px rgba(0,0,0,0.1); position:sticky; top:0; z-index:10;
+      border-radius:0 0 12px 12px;
     }
 
     nav a {
       margin:0 1rem; text-decoration:none; color:var(--text-color);
-      font-weight:500;
-      transition: color 0.3s;
+      font-weight:500; transition: color 0.3s;
     }
-    nav a:hover { color: var(--accent); }
+    nav a:hover { color: #fbbf24; }
 
     .theme-toggle {
       background: var(--accent-gradient);
@@ -47,44 +51,51 @@
       cursor:pointer; font-weight:600;
       transition: all 0.3s;
     }
-    .theme-toggle:hover { opacity:0.8; }
+    .theme-toggle:hover { opacity:0.85; }
 
-    section { padding:4rem 2rem; max-width:900px; margin:auto; opacity:0; transform: translateY(20px); transition: all 0.6s ease-out; }
+    section { padding:4rem 2rem; max-width:900px; margin:auto; opacity:0; transform: translateY(30px); transition: all 0.7s ease-out; }
     section.visible { opacity:1; transform: translateY(0); }
 
     h1,h2,h3 { margin-bottom:1rem; }
-    .hero p { color:#4b5563; margin-bottom:1rem; }
+    h1 { font-size:2.2rem; }
+    h2 { font-size:2rem; border-bottom: 2px solid #fbbf24; display:inline-block; padding-bottom:4px; }
+    h3 { font-size:1.25rem; color:#2563eb; }
+
+    .hero p { color:#f3f4f6; margin-bottom:1rem; line-height:1.5; }
 
     .profile-photo {
-      width:150px; height:150px; border-radius:50%;
-      border:3px solid var(--accent); box-shadow:0 4px 15px rgba(0,0,0,0.2);
-      display:block; margin-bottom:1rem;
+      width:160px; height:160px; border-radius:50%;
+      border:4px solid #fbbf24; box-shadow:0 6px 20px rgba(0,0,0,0.3);
+      display:block; margin-bottom:1rem; transition: transform 0.3s, box-shadow 0.3s;
     }
+    .profile-photo:hover { transform: scale(1.05); box-shadow:0 10px 30px rgba(0,0,0,0.5); }
 
-    .projects, .certificates { display:grid; grid-template-columns:repeat(auto-fit,minmax(280px,1fr)); gap:1.5rem; }
+    .projects, .certificates { display:grid; grid-template-columns:repeat(auto-fit,minmax(280px,1fr)); gap:2rem; }
 
     .card {
-      background: var(--card-bg); border-radius:1rem; padding:1.5rem;
-      box-shadow:0 4px 8px rgba(0,0,0,0.1);
-      transition: transform 0.3s, box-shadow 0.3s;
+      background: var(--card-bg); border-radius:1rem; padding:1.8rem;
+      box-shadow:0 8px 15px rgba(0,0,0,0.15);
+      transition: transform 0.4s, box-shadow 0.4s, background 0.4s;
+      border-top: 4px solid #fbbf24;
     }
-    .card:hover { transform: translateY(-6px); box-shadow:0 10px 20px rgba(0,0,0,0.2); }
+    .card:hover { transform: translateY(-10px) scale(1.02); box-shadow:0 15px 25px rgba(0,0,0,0.3); background: #fef9f4; }
+
     .card a {
-      display:inline-block; margin-top:0.5rem; color:var(--accent); font-weight:500; text-decoration:none;
+      display:inline-block; margin-top:0.5rem; color:var(--accent); font-weight:600; text-decoration:none;
       transition: all 0.3s;
     }
-    .card a:hover { text-decoration:underline; }
+    .card a:hover { text-decoration:underline; color:#fbbf24; }
 
     button, .btn {
-      background: var(--accent-gradient); color:white; padding:0.6rem 1.2rem; border:none;
+      background: var(--accent-gradient); color:white; padding:0.65rem 1.4rem; border:none;
       border-radius:9999px; cursor:pointer; font-weight:600; margin-top:0.5rem;
       transition: all 0.3s;
     }
-    button:hover, .btn:hover { opacity:0.85; }
+    button:hover, .btn:hover { opacity:0.85; transform: scale(1.05); }
 
-    footer { text-align:center; padding:1rem; background:#e5e7eb; margin-top:2rem; }
+    footer { text-align:center; padding:1.2rem; background:rgba(0,0,0,0.1); margin-top:3rem; border-radius:12px 12px 0 0; color:#f3f4f6; }
     .socials a { margin:0 0.5rem; color:var(--text-color); text-decoration:none; font-size:1.25rem; }
-    .socials a:hover { color: var(--accent); }
+    .socials a:hover { color: #fbbf24; }
 
   </style>
 </head>
