--- a/index.html
+++ b/index.html
@@ -3,198 +3,162 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Hammid Bin Aejaz - Portfolio</title>
+  <title>Hammid Bin Aejaz | Portfolio</title>
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
-
-    :root {
-      --bg-gradient: linear-gradient(135deg,#2563eb,#3b82f6);
-      --text-color: #1f2937;
-      --card-bg: #fff;
-      --accent: #2563eb;
-      --accent-gradient: linear-gradient(45deg,#2563eb,#3b82f6);
-    }
-
-    [data-theme="dark"] {
-      --bg-gradient: linear-gradient(135deg,#111827,#1f2937);
-      --text-color: #f9fafb;
-      --card-bg: #1f2937;
-      --accent: #3b82f6;
-      --accent-gradient: linear-gradient(45deg,#3b82f6,#2563eb);
-    }
-
+    /* General Styles */
     body {
-      margin:0; font-family:'Poppins',sans-serif;
-      background: var(--bg-gradient);
-      background-attachment: fixed;
-      color: var(--text-color);
-      scroll-behavior: smooth;
+      font-family: 'Arial', sans-serif;
+      margin: 0;
+      padding: 0;
+      background: linear-gradient(to bottom right, #0f2027, #203a43, #2c5364);
+      color: #fff;
     }
+    a { color: #1de9b6; text-decoration: none; }
+    a:hover { text-decoration: underline; }
+    h1, h2, h3 { margin: 0.5em 0; }
+    .container { width: 90%; max-width: 1000px; margin: auto; padding: 20px; }
+    section { margin-bottom: 50px; }
 
-    header {
-      display:flex; justify-content:space-between; align-items:center;
-      padding:1rem 2rem; background: rgba(255,255,255,0.9);
-      backdrop-filter: blur(8px);
-      box-shadow:0 2px 6px rgba(0,0,0,0.1); position:sticky; top:0; z-index:10;
-      border-radius:0 0 12px 12px;
+    /* Hero */
+    .hero {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+      padding: 50px 0;
     }
-
-    nav a {
-      margin:0 1rem; text-decoration:none; color:var(--text-color);
-      font-weight:500; transition: color 0.3s;
-    }
-    nav a:hover { color: #fbbf24; }
-
-    .theme-toggle {
-      background: var(--accent-gradient);
-      border:none; border-radius:9999px; padding:0.5rem 1rem; color:white;
-      cursor:pointer; font-weight:600;
-      transition: all 0.3s;
-    }
-    .theme-toggle:hover { opacity:0.85; }
-
-    section { padding:4rem 2rem; max-width:900px; margin:auto; opacity:0; transform: translateY(30px); transition: all 0.7s ease-out; }
-    section.visible { opacity:1; transform: translateY(0); }
-
-    h1,h2,h3 { margin-bottom:1rem; }
-    h1 { font-size:2.2rem; }
-    h2 { font-size:2rem; border-bottom: 2px solid #fbbf24; display:inline-block; padding-bottom:4px; }
-    h3 { font-size:1.25rem; color:#2563eb; }
-
-    .hero p { color:#f3f4f6; margin-bottom:1rem; line-height:1.5; }
-
     .profile-photo {
-      width:160px; height:160px; border-radius:50%;
-      border:4px solid #fbbf24; box-shadow:0 6px 20px rgba(0,0,0,0.3);
-      display:block; margin-bottom:1rem; transition: transform 0.3s, box-shadow 0.3s;
+      width: 150px;
+      height: 150px;
+      border-radius: 50%;
+      border: 4px solid #1de9b6;
+      margin-bottom: 20px;
+      object-fit: cover;
     }
-    .profile-photo:hover { transform: scale(1.05); box-shadow:0 10px 30px rgba(0,0,0,0.5); }
+    .hero h1 { font-size: 2.5em; margin-bottom: 10px; }
+    .hero p { font-size: 1.2em; margin-bottom: 15px; }
 
-    .projects, .certificates { display:grid; grid-template-columns:repeat(auto-fit,minmax(280px,1fr)); gap:2rem; }
+    /* Sections */
+    .skills, .projects, .certificates, .contact {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 20px;
+      justify-content: center;
+    }
 
+    /* Cards */
     .card {
-      background: var(--card-bg); border-radius:1rem; padding:1.8rem;
-      box-shadow:0 8px 15px rgba(0,0,0,0.15);
-      transition: transform 0.4s, box-shadow 0.4s, background 0.4s;
-      border-top: 4px solid #fbbf24;
+      background: rgba(255, 255, 255, 0.05);
+      border: 1px solid #1de9b6;
+      border-radius: 10px;
+      padding: 20px;
+      width: 280px;
+      transition: transform 0.3s, box-shadow 0.3s;
     }
-    .card:hover { transform: translateY(-10px) scale(1.02); box-shadow:0 15px 25px rgba(0,0,0,0.3); background: #fef9f4; }
-
-    .card a {
-      display:inline-block; margin-top:0.5rem; color:var(--accent); font-weight:600; text-decoration:none;
-      transition: all 0.3s;
+    .card:hover {
+      transform: translateY(-10px);
+      box-shadow: 0 10px 30px rgba(0,0,0,0.5);
     }
-    .card a:hover { text-decoration:underline; color:#fbbf24; }
 
-    button, .btn {
-      background: var(--accent-gradient); color:white; padding:0.65rem 1.4rem; border:none;
-      border-radius:9999px; cursor:pointer; font-weight:600; margin-top:0.5rem;
-      transition: all 0.3s;
+    /* Buttons */
+    .btn {
+      display: inline-block;
+      padding: 8px 15px;
+      background: #1de9b6;
+      color: #000;
+      font-weight: bold;
+      border-radius: 5px;
+      margin-top: 10px;
+      transition: background 0.3s;
     }
-    button:hover, .btn:hover { opacity:0.85; transform: scale(1.05); }
+    .btn:hover { background: #14c89f; }
 
-    footer { text-align:center; padding:1.2rem; background:rgba(0,0,0,0.1); margin-top:3rem; border-radius:12px 12px 0 0; color:#f3f4f6; }
-    .socials a { margin:0 0.5rem; color:var(--text-color); text-decoration:none; font-size:1.25rem; }
-    .socials a:hover { color: #fbbf24; }
-
+    /* Responsive */
+    @media (max-width: 600px) {
+      .card { width: 100%; }
+    }
   </style>
 </head>
-<body data-theme="light">
+<body>
 
-<header>
-  <h2>Hammid Bin Aejaz</h2>
-  <nav>
-    <a href="#about">About</a>
-    <a href="#projects">Projects</a>
-    <a href="#certificates">Certificates</a>
-    <a href="#contact">Contact</a>
-  </nav>
-  <button class="theme-toggle">🌙</button>
-</header>
+  <!-- Hero Section -->
+  <section class="hero">
+    <img src="assets/profile.jpg" alt="Hammid Bin Aejaz" class="profile-photo">
+    <h1>Hammid Bin Aejaz</h1>
+    <p>B.E. CS (AI & ML) | Machine Learning & Data Enthusiast</p>
+    <p>
+      <a href="mailto:hammidbinaejaz@gmail.com">Email</a> | 
+      <a href="https://github.com/hammidbinaejaz" target="_blank">GitHub</a> | 
+      <a href="https://www.linkedin.com/in/hamid-bin-aejaz-7b7b392a2/" target="_blank">LinkedIn</a>
+    </p>
+  </section>
 
-<section class="hero" id="about">
-  <img src="assets/20250730_134935.jpg" alt="Hammid Bin Aejaz" class="profile-photo">
-  <h1>Hi, I’m Hammid 👋</h1>
-  <p>B.E. Computer Science (AI & ML) | 2023 – 2027</p>
-  <p>
-    <strong>Programming:</strong> Python, Java, C <br>
-    <strong>Data & AI:</strong> ML, AI, Data Analytics, EDA <br>
-    <strong>Tools:</strong> Pandas, NumPy, Scikit-Learn, Git, Jupyter <br>
-    <strong>CS Core:</strong> DSA <br>
-    <strong>Interests:</strong> Networking, Applied AI, ML, Deep Learning
-  </p>
-</section>
-
-<section id="projects">
-  <h2>Projects</h2>
-  <div class="projects">
-    <div class="card">
-      <h3>Embedded AI for Websites (Aug 2025 – Present)</h3>
-      <p>Designed and deployed lightweight AI models for real-time website interaction. Improved scalability and deployment efficiency.</p>
+  <!-- Skills Section -->
+  <section>
+    <h2 style="text-align:center;">Skills</h2>
+    <div class="skills">
+      <div class="card">Python</div>
+      <div class="card">Java</div>
+      <div class="card">C</div>
+      <div class="card">Machine Learning</div>
+      <div class="card">Data Analytics</div>
+      <div class="card">Artificial Intelligence</div>
+      <div class="card">EDA</div>
+      <div class="card">Pandas / NumPy / Scikit-Learn</div>
+      <div class="card">Git / Jupyter</div>
+      <div class="card">Data Structures & Algorithms</div>
+      <div class="card">Networking</div>
+      <div class="card">Deep Learning</div>
     </div>
+  </section>
 
-    <div class="card">
-      <h3>Movie Recommendation System (Aug 2025)</h3>
-      <p>Built and optimized a recommendation engine using collaborative filtering & content-based methods. Accuracy improved by ~20%.</p>
-      <a href="https://github.com/hammidbinaejaz/movie-recommended-system" target="_blank">GitHub Repo</a>
+  <!-- Projects Section -->
+  <section>
+    <h2 style="text-align:center;">Projects</h2>
+    <div class="projects">
+      <div class="card">
+        <h3>Embedded AI for Websites (Aug 2025 – Present)</h3>
+        <p>Designed and deployed lightweight AI models for real-time website interaction. Optimized runtime performance and scalability.</p>
+      </div>
+      <div class="card">
+        <h3>Movie Recommendation System (Aug 2025)</h3>
+        <p>Built a recommendation engine using collaborative filtering & content-based methods. Increased recommendation accuracy by ~20%.</p>
+        <a class="btn" href="https://github.com/hammidbinaejaz/movie-recommended-system" target="_blank">GitHub Repo</a>
+      </div>
+      <div class="card">
+        <h3>IPL Win Predictor (May 2024)</h3>
+        <p>Developed predictive model on historical IPL datasets using Python, Pandas, Scikit-Learn. Achieved ~85% accuracy.</p>
+        <a class="btn" href="https://github.com/hammidbinaejaz/IPL-Win-Predictor" target="_blank">GitHub Repo</a>
+      </div>
     </div>
+  </section>
 
-    <div class="card">
-      <h3>IPL Win Predictor (May 2024)</h3>
-      <p>Developed a predictive model on historical IPL datasets using Python, Pandas, and Scikit-Learn. Achieved ~85% accuracy.</p>
-      <a href="https://github.com/hammidbinaejaz/IPL-Win-Predictor" target="_blank">GitHub Repo</a>
+  <!-- Certificates Section -->
+  <section>
+    <h2 style="text-align:center;">Certificates</h2>
+    <div class="certificates">
+      <div class="card">
+        <h3>Artificial Intelligence Fundamentals – IBM | Aug 2025</h3>
+        <p>
+          <a class="btn" href="assets/IBMDesign20250820-28-p0i2bg.pdf" download>Download PDF</a> | 
+          <a class="btn" href="https://www.credly.com/badges/e67bc372-cab4-4de3-a68a-61d09d8e537b" target="_blank">Verify</a>
+        </p>
+      </div>
     </div>
-  </div>
-</section>
+  </section>
 
-<section id="certificates">
-  <h2>Certificates</h2>
-  <div class="certificates">
-    <div class="card">
-      <h3>Artificial Intelligence Fundamentals – IBM (Virtual) | Aug 2025</h3>
-      <p>
-        <a href="assets/IBMDesign20250820-28-p0i2bg.pdf" download>Download PDF</a> | 
-        <a href="https://www.credly.com/badges/e67bc372-cab4-4de3-a68a-61d09d8e537b" target="_blank">Verify Certificate</a>
-      </p>
+  <!-- Contact Section -->
+  <section>
+    <h2 style="text-align:center;">Contact Me</h2>
+    <div class="contact">
+      <div class="card">
+        <p>Email: <a href="mailto:hammidbinaejaz@gmail.com">hammidbinaejaz@gmail.com</a></p>
+        <p>Phone: +91 9622016339</p>
+        <p>Location: Bangalore, India</p>
+        <a class="btn" href="assets/Resume.pdf" download>Download Resume</a>
+      </div>
     </div>
-  </div>
-</section>
-
-<section id="contact">
-  <h2>Contact</h2>
-  <p>Email: hammidbinaejaz@gmail.com | Phone: +91 9622016339 | Bangalore</p>
-  <div class="socials">
-    <a href="https://github.com/hammidbinaejaz" target="_blank">GitHub</a>
-  </div>
-</section>
-
-<footer>
-  <p>© 2025 Hammid Bin Aejaz. All rights reserved.</p>
-</footer>
-
-<script>
-  // Dark / Light toggle
-  const toggle = document.querySelector('.theme-toggle');
-  const body = document.body;
-  toggle.addEventListener('click', () => {
-    if(body.getAttribute('data-theme') === 'light') {
-      body.setAttribute('data-theme','dark');
-      toggle.textContent = '☀️';
-    } else {
-      body.setAttribute('data-theme','light');
-      toggle.textContent = '🌙';
-    }
-  });
-
-  // Scroll fade-in animation
-  const sections = document.querySelectorAll('section');
-  window.addEventListener('scroll', () => {
-    sections.forEach(sec => {
-      const top = sec.getBoundingClientRect().top;
-      if(top < window.innerHeight * 0.85) sec.classList.add('visible');
-    });
-  });
-</script>
+  </section>
 
 </body>
 </html>
