--- a/index.html
+++ b/index.html
@@ -1,91 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Hammid Bin Aejaz | Portfolio</title>
-  <style>
-    /* General Styles */
-    body {
-      font-family: 'Arial', sans-serif;
-      margin: 0;
-      padding: 0;
-      background: linear-gradient(to bottom right, #0f2027, #203a43, #2c5364);
-      color: #fff;
-    }
-    a { color: #1de9b6; text-decoration: none; }
-    a:hover { text-decoration: underline; }
-    h1, h2, h3 { margin: 0.5em 0; }
-    .container { width: 90%; max-width: 1000px; margin: auto; padding: 20px; }
-    section { margin-bottom: 50px; }
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Hammid Bin Aejaz | Portfolio</title>
+<style>
+  body { font-family:'Arial',sans-serif; margin:0; padding:0; background: linear-gradient(to right, #0f2027, #203a43, #2c5364); color:#fff; scroll-behavior:smooth; }
+  a { color:#1de9b6; text-decoration:none; } a:hover { color:#14c89f; }
+  
+  /* Navbar */
+  nav { position:fixed; top:0; width:100%; background:rgba(15,32,39,0.95); display:flex; justify-content:center; gap:30px; padding:15px 0; z-index:100; border-bottom:1px solid #1de9b6; }
+  nav a { font-weight:bold; } nav a:hover { color:#14c89f; }
 
-    /* Hero */
-    .hero {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      text-align: center;
-      padding: 50px 0;
-    }
-    .profile-photo {
-      width: 150px;
-      height: 150px;
-      border-radius: 50%;
-      border: 4px solid #1de9b6;
-      margin-bottom: 20px;
-      object-fit: cover;
-    }
-    .hero h1 { font-size: 2.5em; margin-bottom: 10px; }
-    .hero p { font-size: 1.2em; margin-bottom: 15px; }
+  .container { width:90%; max-width:1000px; margin:auto; padding:100px 20px 20px 20px; }
 
-    /* Sections */
-    .skills, .projects, .certificates, .contact {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 20px;
-      justify-content: center;
-    }
+  /* Hero */
+  .hero { display:flex; flex-direction:column; align-items:center; text-align:center; padding:50px 0 30px 0; }
+  .profile-photo { width:160px; height:160px; border-radius:50%; border:4px solid #1de9b6; margin-bottom:20px; object-fit:cover; }
+  .hero h1 { font-size:2.5em; margin-bottom:10px; }
+  .typing { font-weight:bold; color:#1de9b6; border-right:3px solid #1de9b6; white-space:nowrap; overflow:hidden; display:inline-block; }
 
-    /* Cards */
-    .card {
-      background: rgba(255, 255, 255, 0.05);
-      border: 1px solid #1de9b6;
-      border-radius: 10px;
-      padding: 20px;
-      width: 280px;
-      transition: transform 0.3s, box-shadow 0.3s;
-    }
-    .card:hover {
-      transform: translateY(-10px);
-      box-shadow: 0 10px 30px rgba(0,0,0,0.5);
-    }
+  @keyframes blink { 50% { border-color: transparent; } }
 
-    /* Buttons */
-    .btn {
-      display: inline-block;
-      padding: 8px 15px;
-      background: #1de9b6;
-      color: #000;
-      font-weight: bold;
-      border-radius: 5px;
-      margin-top: 10px;
-      transition: background 0.3s;
-    }
-    .btn:hover { background: #14c89f; }
+  /* Sections */
+  section { margin-bottom:50px; opacity:0; transform: translateY(30px); transition: all 0.8s ease-out; }
+  section.visible { opacity:1; transform: translateY(0); }
 
-    /* Responsive */
-    @media (max-width: 600px) {
-      .card { width: 100%; }
-    }
-  </style>
+  /* Cards */
+  .skills, .projects, .certificates, .contact { display:flex; flex-wrap:wrap; gap:20px; justify-content:center; }
+  .card { background: rgba(255,255,255,0.05); border:1px solid #1de9b6; border-radius:10px; padding:20px; width:280px; transition: transform 0.3s, box-shadow 0.3s; }
+  .card:hover { transform: rotateX(5deg) rotateY(5deg) translateY(-10px); box-shadow:0 15px 40px rgba(0,0,0,0.6); }
+
+  .btn { display:inline-block; padding:8px 15px; background:#1de9b6; color:#000; font-weight:bold; border-radius:5px; margin-top:10px; transition:0.3s; }
+  .btn:hover { background:#14c89f; }
+
+  @media(max-width:600px){ .card{width:100%;} nav{flex-direction:column; gap:10px;} }
+</style>
 </head>
 <body>
 
-  <!-- Hero Section -->
-  <section class="hero">
+<nav>
+  <a href="#about">About</a>
+  <a href="#projects">Projects</a>
+  <a href="#certificates">Certificates</a>
+  <a href="#contact">Contact</a>
+</nav>
+
+<div class="container">
+
+  <!-- About -->
+  <section id="about" class="hero">
     <img src="assets/profile.jpg" alt="Hammid Bin Aejaz" class="profile-photo">
     <h1>Hammid Bin Aejaz</h1>
-    <p>B.E. CS (AI & ML) | Machine Learning & Data Enthusiast</p>
+    <p class="typing">Machine Learning & AI Enthusiast</p>
     <p>
       <a href="mailto:hammidbinaejaz@gmail.com">Email</a> | 
       <a href="https://github.com/hammidbinaejaz" target="_blank">GitHub</a> | 
@@ -93,8 +60,8 @@
     </p>
   </section>
 
-  <!-- Skills Section -->
-  <section>
+  <!-- Skills -->
+  <section id="skills">
     <h2 style="text-align:center;">Skills</h2>
     <div class="skills">
       <div class="card">Python</div>
@@ -112,8 +79,8 @@
     </div>
   </section>
 
-  <!-- Projects Section -->
-  <section>
+  <!-- Projects -->
+  <section id="projects">
     <h2 style="text-align:center;">Projects</h2>
     <div class="projects">
       <div class="card">
@@ -133,8 +100,8 @@
     </div>
   </section>
 
-  <!-- Certificates Section -->
-  <section>
+  <!-- Certificates -->
+  <section id="certificates">
     <h2 style="text-align:center;">Certificates</h2>
     <div class="certificates">
       <div class="card">
@@ -147,8 +114,8 @@
     </div>
   </section>
 
-  <!-- Contact Section -->
-  <section>
+  <!-- Contact -->
+  <section id="contact">
     <h2 style="text-align:center;">Contact Me</h2>
     <div class="contact">
       <div class="card">
@@ -159,6 +126,35 @@
       </div>
     </div>
   </section>
+
+</div>
+
+<script>
+  // Typing effect
+  const typing = document.querySelector('.typing');
+  const text = typing.textContent;
+  typing.textContent = '';
+  let i=0;
+  function typeWriter() {
+    if(i < text.length) {
+      typing.textContent += text.charAt(i);
+      i++;
+      setTimeout(typeWriter,100);
+    } else {
+      setInterval(()=>{typing.classList.toggle('blink')},500);
+    }
+  }
+  typeWriter();
+
+  // Scroll reveal
+  const sections = document.querySelectorAll('section');
+  const observer = new IntersectionObserver(entries=>{
+    entries.forEach(entry=>{
+      if(entry.isIntersecting){ entry.target.classList.add('visible'); }
+    });
+  }, {threshold:0.1});
+  sections.forEach(sec=>observer.observe(sec));
+</script>
 
 </body>
 </html>
