--- a/index.html
+++ b/index.html
@@ -4,14 +4,29 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Hammid Bin Aejaz | Portfolio</title>
-<style>
-  body { font-family:'Arial',sans-serif; margin:0; padding:0; background: linear-gradient(to right, #0f2027, #203a43, #2c5364); color:#fff; scroll-behavior:smooth; }
-  a { color:#1de9b6; text-decoration:none; } a:hover { color:#14c89f; }
-  
-  /* Navbar */
-  nav { position:fixed; top:0; width:100%; background:rgba(15,32,39,0.95); display:flex; justify-content:center; gap:30px; padding:15px 0; z-index:100; border-bottom:1px solid #1de9b6; }
-  nav a { font-weight:bold; } nav a:hover { color:#14c89f; }
 
+<!-- Font Awesome for icons -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+
+<style>
+  /* Base */
+  body { font-family:'Arial',sans-serif; margin:0; padding:0; scroll-behavior:smooth; transition: background 0.3s, color 0.3s; }
+  a { text-decoration:none; transition: color 0.3s; }
+  .btn { display:inline-block; padding:8px 15px; background:#1de9b6; color:#000; font-weight:bold; border-radius:5px; margin-top:10px; transition:0.3s; }
+  .btn:hover { background:#14c89f; }
+
+  /* Dark/Light Toggle */
+  .toggle-btn { position:fixed; top:15px; right:15px; background:#1de9b6; color:#000; padding:8px 12px; border:none; border-radius:5px; cursor:pointer; z-index:200; }
+  .dark { background:#0f2027; color:#fff; }
+  .dark nav { background:rgba(15,32,39,0.95); border-bottom:1px solid #1de9b6; }
+  .dark .card { background: rgba(255,255,255,0.05); border:1px solid #1de9b6; }
+
+  /* Navbar */
+  nav { position:fixed; top:0; width:100%; display:flex; justify-content:center; gap:30px; padding:15px 0; z-index:100; background:rgba(15,32,39,0.95); border-bottom:1px solid #1de9b6; }
+  nav a { font-weight:bold; color:#1de9b6; } 
+  nav a:hover { color:#14c89f; }
+
+  /* Container */
   .container { width:90%; max-width:1000px; margin:auto; padding:100px 20px 20px 20px; }
 
   /* Hero */
@@ -27,22 +42,54 @@
   section.visible { opacity:1; transform: translateY(0); }
 
   /* Cards */
-  .skills, .projects, .certificates, .contact { display:flex; flex-wrap:wrap; gap:20px; justify-content:center; }
-  .card { background: rgba(255,255,255,0.05); border:1px solid #1de9b6; border-radius:10px; padding:20px; width:280px; transition: transform 0.3s, box-shadow 0.3s; }
-  .card:hover { transform: rotateX(5deg) rotateY(5deg) translateY(-10px); box-shadow:0 15px 40px rgba(0,0,0,0.6); }
+  .skills, .projects, .certificates, .hobbies, .contact { display:flex; flex-wrap:wrap; gap:20px; justify-content:center; }
+  .card { background: rgba(255,255,255,0.05); border:1px solid #1de9b6; border-radius:10px; padding:20px; width:280px; text-align:center; transition: transform 0.4s ease, box-shadow 0.4s ease, border-color 0.3s ease; }
+  .card i { font-size:2em; margin-bottom:10px; color:#1de9b6; transition: transform 0.4s ease, color 0.3s ease; }
 
-  .btn { display:inline-block; padding:8px 15px; background:#1de9b6; color:#000; font-weight:bold; border-radius:5px; margin-top:10px; transition:0.3s; }
-  .btn:hover { background:#14c89f; }
+  /* Skill hover: glow + scale */
+  .skills .card:hover {
+    transform: scale(1.08) rotateX(5deg) rotateY(5deg);
+    box-shadow: 0 15px 50px rgba(29, 233, 182, 0.6);
+    border-color: #14c89f;
+  }
 
-  @media(max-width:600px){ .card{width:100%;} nav{flex-direction:column; gap:10px;} }
+  /* Certificate hover: lift + shine */
+  .certificates .card:hover {
+    transform: translateY(-10px) scale(1.02);
+    box-shadow: 0 20px 60px rgba(29, 233, 182, 0.7);
+    border-color: #14c89f;
+  }
+
+  /* Hobby hover: bounce */
+  .hobbies .card:hover {
+    transform: scale(1.1) rotate(-2deg);
+    box-shadow: 0 10px 30px rgba(29, 233, 182, 0.5);
+    border-color: #14c89f;
+  }
+
+  /* Icon animation on hover */
+  .card:hover i {
+    transform: scale(1.3) rotate(10deg);
+    color:#14c89f;
+  }
+
+  /* Responsive */
+  @media(max-width:600px){ 
+    .card{width:100%;} 
+    nav{flex-direction:column; gap:10px;} 
+  }
 </style>
 </head>
-<body>
+<body class="dark">
+
+<button class="toggle-btn" onclick="toggleTheme()">Toggle Dark/Light</button>
 
 <nav>
   <a href="#about">About</a>
+  <a href="#skills">Skills</a>
   <a href="#projects">Projects</a>
   <a href="#certificates">Certificates</a>
+  <a href="#hobbies">Hobbies</a>
   <a href="#contact">Contact</a>
 </nav>
 
@@ -64,18 +111,18 @@
   <section id="skills">
     <h2 style="text-align:center;">Skills</h2>
     <div class="skills">
-      <div class="card">Python</div>
-      <div class="card">Java</div>
-      <div class="card">C</div>
-      <div class="card">Machine Learning</div>
-      <div class="card">Data Analytics</div>
-      <div class="card">Artificial Intelligence</div>
-      <div class="card">EDA</div>
-      <div class="card">Pandas / NumPy / Scikit-Learn</div>
-      <div class="card">Git / Jupyter</div>
-      <div class="card">Data Structures & Algorithms</div>
-      <div class="card">Networking</div>
-      <div class="card">Deep Learning</div>
+      <div class="card"><i class="fab fa-python"></i>Python</div>
+      <div class="card"><i class="fab fa-java"></i>Java</div>
+      <div class="card"><i class="fas fa-c"></i>C</div>
+      <div class="card"><i class="fas fa-robot"></i>Machine Learning</div>
+      <div class="card"><i class="fas fa-chart-line"></i>Data Analytics</div>
+      <div class="card"><i class="fas fa-brain"></i>Artificial Intelligence</div>
+      <div class="card"><i class="fas fa-database"></i>EDA</div>
+      <div class="card"><i class="fas fa-project-diagram"></i>Pandas / NumPy / Scikit-Learn</div>
+      <div class="card"><i class="fab fa-git-alt"></i>Git / GitHub</div>
+      <div class="card"><i class="fas fa-network-wired"></i>Data Structures & Algorithms</div>
+      <div class="card"><i class="fas fa-server"></i>Networking</div>
+      <div class="card"><i class="fas fa-layer-group"></i>Deep Learning</div>
     </div>
   </section>
 
@@ -111,6 +158,32 @@
           <a class="btn" href="https://www.credly.com/badges/e67bc372-cab4-4de3-a68a-61d09d8e537b" target="_blank">Verify</a>
         </p>
       </div>
+      <div class="card">
+        <h3>Data Structures & Algorithms – Infosys Springboard</h3>
+        <p><a class="btn" href="assets/DSA_infosys.pdf" download>Download PDF</a></p>
+      </div>
+      <div class="card">
+        <h3>Advanced DSA – Infosys Springboard</h3>
+        <p><a class="btn" href="assets/Advanced_DSA.pdf" download>Download PDF</a></p>
+      </div>
+      <div class="card">
+        <h3>Artificial Intelligence – Infosys Springboard</h3>
+        <p><a class="btn" href="assets/AI_infosys.pdf" download>Download PDF</a></p>
+      </div>
+      <div class="card">
+        <h3>Querying SQL Databases – Infosys Springboard</h3>
+        <p><a class="btn" href="assets/SQL_DBMS.pdf" download>Download PDF</a></p>
+      </div>
+    </div>
+  </section>
+
+  <!-- Hobbies -->
+  <section id="hobbies">
+    <h2 style="text-align:center;">Hobbies</h2>
+    <div class="hobbies">
+      <div class="card"><i class="fas fa-utensils"></i>Cooking</div>
+      <div class="card"><i class="fas fa-book"></i>Reading Books</div>
+      <div class="card"><i class="fas fa-mountain"></i>Trekking</div>
     </div>
   </section>
 
@@ -154,6 +227,11 @@
     });
   }, {threshold:0.1});
   sections.forEach(sec=>observer.observe(sec));
+
+  // Dark/light toggle
+  function toggleTheme() {
+    document.body.classList.toggle('dark');
+  }
 </script>
 
 </body>
