Professional portfolio redesign: added navbar, new photo, icons, hobbies, and certificates

--- a/index.html
+++ b/index.html
@@ -9,27 +9,21 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 
 <style>
-  /* Base */
-  body { font-family:'Arial',sans-serif; margin:0; padding:0; scroll-behavior:smooth; transition: background 0.3s, color 0.3s; }
-  a { text-decoration:none; transition: color 0.3s; }
+  body { font-family:'Arial',sans-serif; margin:0; padding:0; scroll-behavior:smooth; transition: background 0.3s, color 0.3s;}
+  a { text-decoration:none; transition: color 0.3s;}
   .btn { display:inline-block; padding:8px 15px; background:#1de9b6; color:#000; font-weight:bold; border-radius:5px; margin-top:10px; transition:0.3s; }
   .btn:hover { background:#14c89f; }
 
-  /* Dark/Light Toggle */
   .toggle-btn { position:fixed; top:15px; right:15px; background:#1de9b6; color:#000; padding:8px 12px; border:none; border-radius:5px; cursor:pointer; z-index:200; }
   .dark { background:#0f2027; color:#fff; }
-  .dark nav { background:rgba(15,32,39,0.95); border-bottom:1px solid #1de9b6; }
+  .dark nav { background:rgba(15,32,39,0.95); border-bottom:1px solid #1de9b6;}
   .dark .card { background: rgba(255,255,255,0.05); border:1px solid #1de9b6; }
 
-  /* Navbar */
   nav { position:fixed; top:0; width:100%; display:flex; justify-content:center; gap:30px; padding:15px 0; z-index:100; background:rgba(15,32,39,0.95); border-bottom:1px solid #1de9b6; }
   nav a { font-weight:bold; color:#1de9b6; } 
   nav a:hover { color:#14c89f; }
 
-  /* Container */
   .container { width:90%; max-width:1000px; margin:auto; padding:100px 20px 20px 20px; }
-
-  /* Hero */
   .hero { display:flex; flex-direction:column; align-items:center; text-align:center; padding:50px 0 30px 0; }
   .profile-photo { width:160px; height:160px; border-radius:50%; border:4px solid #1de9b6; margin-bottom:20px; object-fit:cover; }
   .hero h1 { font-size:2.5em; margin-bottom:10px; }
@@ -37,43 +31,17 @@
 
   @keyframes blink { 50% { border-color: transparent; } }
 
-  /* Sections */
   section { margin-bottom:50px; opacity:0; transform: translateY(30px); transition: all 0.8s ease-out; }
   section.visible { opacity:1; transform: translateY(0); }
 
-  /* Cards */
   .skills, .projects, .certificates, .hobbies, .contact { display:flex; flex-wrap:wrap; gap:20px; justify-content:center; }
-  .card { background: rgba(255,255,255,0.05); border:1px solid #1de9b6; border-radius:10px; padding:20px; width:280px; text-align:center; transition: transform 0.4s ease, box-shadow 0.4s ease, border-color 0.3s ease; }
-  .card i { font-size:2em; margin-bottom:10px; color:#1de9b6; transition: transform 0.4s ease, color 0.3s ease; }
+  .card { background: rgba(255,255,255,0.05); border:1px solid #1de9b6; border-radius:10px; padding:20px; width:280px; text-align:center; transition: transform 0.3s, box-shadow 0.3s; }
+  .card:hover { transform: rotateX(5deg) rotateY(5deg) translateY(-10px); box-shadow:0 15px 40px rgba(0,0,0,0.6); }
+  .card i { font-size:2em; margin-bottom:10px; color:#1de9b6; display:block; }
 
-  /* Skill hover: glow + scale */
-  .skills .card:hover {
-    transform: scale(1.08) rotateX(5deg) rotateY(5deg);
-    box-shadow: 0 15px 50px rgba(29, 233, 182, 0.6);
-    border-color: #14c89f;
-  }
+  .cert-card h3 { margin-bottom:10px; font-size:1.1em; }
+  .cert-buttons { display:flex; justify-content:center; gap:10px; flex-wrap:wrap; }
 
-  /* Certificate hover: lift + shine */
-  .certificates .card:hover {
-    transform: translateY(-10px) scale(1.02);
-    box-shadow: 0 20px 60px rgba(29, 233, 182, 0.7);
-    border-color: #14c89f;
-  }
-
-  /* Hobby hover: bounce */
-  .hobbies .card:hover {
-    transform: scale(1.1) rotate(-2deg);
-    box-shadow: 0 10px 30px rgba(29, 233, 182, 0.5);
-    border-color: #14c89f;
-  }
-
-  /* Icon animation on hover */
-  .card:hover i {
-    transform: scale(1.3) rotate(10deg);
-    color:#14c89f;
-  }
-
-  /* Responsive */
   @media(max-width:600px){ 
     .card{width:100%;} 
     nav{flex-direction:column; gap:10px;} 
@@ -120,7 +88,7 @@
       <div class="card"><i class="fas fa-database"></i>EDA</div>
       <div class="card"><i class="fas fa-project-diagram"></i>Pandas / NumPy / Scikit-Learn</div>
       <div class="card"><i class="fab fa-git-alt"></i>Git / GitHub</div>
-      <div class="card"><i class="fas fa-network-wired"></i>Data Structures & Algorithms</div>
+      <div class="card"><i class="fas fa-network-wired"></i>DSA</div>
       <div class="card"><i class="fas fa-server"></i>Networking</div>
       <div class="card"><i class="fas fa-layer-group"></i>Deep Learning</div>
     </div>
@@ -151,28 +119,36 @@
   <section id="certificates">
     <h2 style="text-align:center;">Certificates</h2>
     <div class="certificates">
-      <div class="card">
+      <div class="card cert-card">
         <h3>Artificial Intelligence Fundamentals – IBM | Aug 2025</h3>
-        <p>
-          <a class="btn" href="assets/IBMDesign20250820-28-p0i2bg.pdf" download>Download PDF</a> | 
+        <div class="cert-buttons">
+          <a class="btn" href="assets/IBMDesign20250820-28-p0i2bg.pdf" download>Download PDF</a>
           <a class="btn" href="https://www.credly.com/badges/e67bc372-cab4-4de3-a68a-61d09d8e537b" target="_blank">Verify</a>
-        </p>
+        </div>
       </div>
-      <div class="card">
-        <h3>Data Structures & Algorithms – Infosys Springboard</h3>
-        <p><a class="btn" href="assets/DSA_infosys.pdf" download>Download PDF</a></p>
+      <div class="card cert-card">
+        <h3>Data Structures & Algorithms – Infosys</h3>
+        <div class="cert-buttons">
+          <a class="btn" href="assets/DSA_infosys.pdf" download>Download PDF</a>
+        </div>
       </div>
-      <div class="card">
-        <h3>Advanced DSA – Infosys Springboard</h3>
-        <p><a class="btn" href="assets/Advanced_DSA.pdf" download>Download PDF</a></p>
+      <div class="card cert-card">
+        <h3>Advanced DSA – Infosys</h3>
+        <div class="cert-buttons">
+          <a class="btn" href="assets/Advanced_DSA.pdf" download>Download PDF</a>
+        </div>
       </div>
-      <div class="card">
-        <h3>Artificial Intelligence – Infosys Springboard</h3>
-        <p><a class="btn" href="assets/AI_infosys.pdf" download>Download PDF</a></p>
+      <div class="card cert-card">
+        <h3>Artificial Intelligence – Infosys</h3>
+        <div class="cert-buttons">
+          <a class="btn" href="assets/AI_infosys.pdf" download>Download PDF</a>
+        </div>
       </div>
-      <div class="card">
-        <h3>Querying SQL Databases – Infosys Springboard</h3>
-        <p><a class="btn" href="assets/SQL_DBMS.pdf" download>Download PDF</a></p>
+      <div class="card cert-card">
+        <h3>Querying SQL Databases – Infosys</h3>
+        <div class="cert-buttons">
+          <a class="btn" href="assets/SQL_DBMS.pdf" download>Download PDF</a>
+        </div>
       </div>
     </div>
   </section>
@@ -229,9 +205,7 @@
   sections.forEach(sec=>observer.observe(sec));
 
   // Dark/light toggle
-  function toggleTheme() {
-    document.body.classList.toggle('dark');
-  }
+  function toggleTheme() { document.body.classList.toggle('dark'); }
 </script>
 
 </body>
