--- a/index.html
+++ b/index.html
@@ -9,21 +9,27 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 
 <style>
+  /* Base */
   body { font-family:'Arial',sans-serif; margin:0; padding:0; scroll-behavior:smooth; transition: background 0.3s, color 0.3s;}
   a { text-decoration:none; transition: color 0.3s;}
   .btn { display:inline-block; padding:8px 15px; background:#1de9b6; color:#000; font-weight:bold; border-radius:5px; margin-top:10px; transition:0.3s; }
-  .btn:hover { background:#14c89f; }
+  .btn:hover { background:#14c89f; color:#fff; }
 
+  /* Dark/Light Toggle */
   .toggle-btn { position:fixed; top:15px; right:15px; background:#1de9b6; color:#000; padding:8px 12px; border:none; border-radius:5px; cursor:pointer; z-index:200; }
   .dark { background:#0f2027; color:#fff; }
   .dark nav { background:rgba(15,32,39,0.95); border-bottom:1px solid #1de9b6;}
   .dark .card { background: rgba(255,255,255,0.05); border:1px solid #1de9b6; }
 
+  /* Navbar */
   nav { position:fixed; top:0; width:100%; display:flex; justify-content:center; gap:30px; padding:15px 0; z-index:100; background:rgba(15,32,39,0.95); border-bottom:1px solid #1de9b6; }
   nav a { font-weight:bold; color:#1de9b6; } 
   nav a:hover { color:#14c89f; }
 
+  /* Container */
   .container { width:90%; max-width:1000px; margin:auto; padding:100px 20px 20px 20px; }
+
+  /* Hero */
   .hero { display:flex; flex-direction:column; align-items:center; text-align:center; padding:50px 0 30px 0; }
   .profile-photo { width:160px; height:160px; border-radius:50%; border:4px solid #1de9b6; margin-bottom:20px; object-fit:cover; }
   .hero h1 { font-size:2.5em; margin-bottom:10px; }
@@ -31,21 +37,25 @@
 
   @keyframes blink { 50% { border-color: transparent; } }
 
+  /* Sections */
   section { margin-bottom:50px; opacity:0; transform: translateY(30px); transition: all 0.8s ease-out; }
   section.visible { opacity:1; transform: translateY(0); }
 
+  /* Cards */
   .skills, .projects, .certificates, .hobbies, .contact { display:flex; flex-wrap:wrap; gap:20px; justify-content:center; }
   .card { background: rgba(255,255,255,0.05); border:1px solid #1de9b6; border-radius:10px; padding:20px; width:280px; text-align:center; transition: transform 0.3s, box-shadow 0.3s; }
   .card:hover { transform: rotateX(5deg) rotateY(5deg) translateY(-10px); box-shadow:0 15px 40px rgba(0,0,0,0.6); }
-  .card i { font-size:2em; margin-bottom:10px; color:#1de9b6; display:block; }
+  .card i { font-size:2em; margin-bottom:10px; color:#1de9b6; }
+  .certificates .card img { width:60px; margin-bottom:10px; transition: transform 0.3s; }
+  .certificates .card:hover img { transform: scale(1.2); }
+  .certificates .card:hover .btn { background:#14c89f; color:#fff; }
 
-  .cert-card h3 { margin-bottom:10px; font-size:1.1em; }
-  .cert-buttons { display:flex; justify-content:center; gap:10px; flex-wrap:wrap; }
-
+  /* Responsive */
   @media(max-width:600px){ 
     .card{width:100%;} 
     nav{flex-direction:column; gap:10px;} 
   }
+
 </style>
 </head>
 <body class="dark">
@@ -67,7 +77,7 @@
   <section id="about" class="hero">
     <img src="assets/profile.jpg" alt="Hammid Bin Aejaz" class="profile-photo">
     <h1>Hammid Bin Aejaz</h1>
-    <p class="typing">Machine Learning & AI Enthusiast</p>
+    <p class="typing">Hi! I’m Hammid, an AI and Machine Learning enthusiast. I enjoy turning data into meaningful insights, building smart systems, tackling real-world problems, and creating projects that really matter. Learning new technologies and creating projects that make an impact keeps me motivated every day.</p>
     <p>
       <a href="mailto:hammidbinaejaz@gmail.com">Email</a> | 
       <a href="https://github.com/hammidbinaejaz" target="_blank">GitHub</a> | 
@@ -88,7 +98,7 @@
       <div class="card"><i class="fas fa-database"></i>EDA</div>
       <div class="card"><i class="fas fa-project-diagram"></i>Pandas / NumPy / Scikit-Learn</div>
       <div class="card"><i class="fab fa-git-alt"></i>Git / GitHub</div>
-      <div class="card"><i class="fas fa-network-wired"></i>DSA</div>
+      <div class="card"><i class="fas fa-network-wired"></i>Data Structures & Algorithms</div>
       <div class="card"><i class="fas fa-server"></i>Networking</div>
       <div class="card"><i class="fas fa-layer-group"></i>Deep Learning</div>
     </div>
@@ -119,37 +129,40 @@
   <section id="certificates">
     <h2 style="text-align:center;">Certificates</h2>
     <div class="certificates">
-      <div class="card cert-card">
+
+      <div class="card">
+        <img src="assets/IBM_logo.png" alt="IBM">
         <h3>Artificial Intelligence Fundamentals – IBM | Aug 2025</h3>
-        <div class="cert-buttons">
-          <a class="btn" href="assets/IBMDesign20250820-28-p0i2bg.pdf" download>Download PDF</a>
+        <p>
+          <a class="btn" href="assets/IBMDesign20250820-28-p0i2bg.pdf" download>Download PDF</a> | 
           <a class="btn" href="https://www.credly.com/badges/e67bc372-cab4-4de3-a68a-61d09d8e537b" target="_blank">Verify</a>
-        </div>
+        </p>
       </div>
-      <div class="card cert-card">
+
+      <div class="card">
+        <img src="assets/Infosys_logo.png" alt="Infosys">
         <h3>Data Structures & Algorithms – Infosys</h3>
-        <div class="cert-buttons">
-          <a class="btn" href="assets/DSA_infosys.pdf" download>Download PDF</a>
-        </div>
+        <p><a class="btn" href="assets/DSA_infosys.pdf" download>Download PDF</a></p>
       </div>
-      <div class="card cert-card">
+
+      <div class="card">
+        <img src="assets/Infosys_logo.png" alt="Infosys">
         <h3>Advanced DSA – Infosys</h3>
-        <div class="cert-buttons">
-          <a class="btn" href="assets/Advanced_DSA.pdf" download>Download PDF</a>
-        </div>
+        <p><a class="btn" href="assets/Advanced_DSA.pdf" download>Download PDF</a></p>
       </div>
-      <div class="card cert-card">
+
+      <div class="card">
+        <img src="assets/Infosys_logo.png" alt="Infosys">
         <h3>Artificial Intelligence – Infosys</h3>
-        <div class="cert-buttons">
-          <a class="btn" href="assets/AI_infosys.pdf" download>Download PDF</a>
-        </div>
+        <p><a class="btn" href="assets/AI_infosys.pdf" download>Download PDF</a></p>
       </div>
-      <div class="card cert-card">
+
+      <div class="card">
+        <img src="assets/Infosys_logo.png" alt="Infosys">
         <h3>Querying SQL Databases – Infosys</h3>
-        <div class="cert-buttons">
-          <a class="btn" href="assets/SQL_DBMS.pdf" download>Download PDF</a>
-        </div>
+        <p><a class="btn" href="assets/SQL_DBMS.pdf" download>Download PDF</a></p>
       </div>
+
     </div>
   </section>
 
@@ -205,7 +218,9 @@
   sections.forEach(sec=>observer.observe(sec));
 
   // Dark/light toggle
-  function toggleTheme() { document.body.classList.toggle('dark'); }
+  function toggleTheme() {
+    document.body.classList.toggle('dark');
+  }
 </script>
 
 </body>
